syntax = "proto3";

option go_package = "github.com/rezamokaram/sample-auth/api/pb";


message UserSignUpRequest {
    string firstName = 1 [json_name = "firstName"];
    string lastName = 2 [json_name = "lastName"];
    string phone = 3 [json_name = "phone"];
    string password = 4 [json_name = "password"];
}

message UserSignUpResponse {
    string accessToken = 1 [json_name = "accessToken"];
    string refreshToken = 2 [json_name = "refreshToken"];
}


message UserSignInRequest {
    string phone = 1 [json_name = "phone"];
    string password = 2 [json_name = "password"];
    string otp = 3 [json_name = "otp"];
}

message UserSignInResponse {
    string accessToken = 1 [json_name = "accessToken"];
    string refreshToken = 2 [json_name = "refreshToken"];
}

message User {
    uint64 id = 1 [json_name = "id"];
    string firstName = 2 [json_name = "firstName"];
    string lastName = 3 [json_name = "lastName"];
    string phone = 4 [json_name = "phone"];
}